🚀 Setup Vercel deployment: Configure frontend for OmniBoard with Railway backend integration

--- a/preview/package.json
+++ b/preview/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "pnpm run clean && pnpm run css && pnpm run js && pnpm run html",
+    "vercel-build": "pnpm run build",
     "dev": "pnpm run clean && pnpm run watch",
     "watch": "concurrently \"pnpm run watch-html\" \"pnpm run watch-css\" \"pnpm run watch-js\"",
     "watch-html": "cross-env NODE_ENV=development eleventy --serve --port=3000 --watch --incremental",
