🚀 Deploy frontend to Vercel: Successfully deployed OmniBoard frontend with Railway backend integration

--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "preview/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "preview/dist"
-      }
+      "src": "preview/dist/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
