🎯 Fix Vercel deployment: Successfully deploy OmniBoard frontend to Vercel

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -40,5 +40,5 @@ jobs:
         vercel-token: ${{ secrets.VERCEL_TOKEN }}
         vercel-org-id: ${{ secrets.ORG_ID }}
         vercel-project-id: ${{ secrets.PROJECT_ID }}
-        working-directory: ./preview/dist
+        working-directory: ./
         vercel-args: '--prod'
