🔧 Исправлена конфигурация Railway для бэкенда
- Добавлен start скрипт в корневой package.json
- Создан Procfile в корне проекта
- Создан .railwayignore в корне проекта
- Обновлен backend/railway.json с rootDirectory
- Создан backend/nixpacks.toml для явной конфигурации
- Упрощен backend/package.json - убраны devDependencies
- Railway теперь должен правильно найти команду запуска

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "OmniBoard - Crypto Trading Dashboard",
   "homepage": "https://omniboard.io",
   "scripts": {
+    "start": "cd backend && npm start",
     "dev": "cd frontend && npm run dev",
     "backend:dev": "cd backend && npm run dev",
     "backend:start": "cd backend && npm start",
