--- a/.railwayignore
+++ b/.railwayignore
@@ -1,3 +1,4 @@
+frontend/
 node_modules/
 .env
 .env.local
@@ -6,6 +7,6 @@ node_modules/
 Thumbs.db
 .vscode/
 .idea/
-tests/
 .git/
 .gitignore
+README.md
