--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
     "build": "echo 'No build step required'",
-    "postinstall": "echo 'Dependencies installed successfully'",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --write .",
-    "check-format": "prettier --check ."
+    "postinstall": "echo 'Dependencies installed successfully'"
   },
   "keywords": [
     "crypto",
@@ -38,15 +30,6 @@
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "winston": "^3.11.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.1.0",
-    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
