🔧 Исправлена установка зависимостей для Railway
- Добавлен postinstall скрипт в корневой package.json
- Создан railway.toml в корне проекта
- Создан nixpacks.toml в корне проекта
- Явно указана установка зависимостей backend
- Railway теперь должен правильно установить express и другие модули

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://omniboard.io",
   "scripts": {
     "start": "cd backend && npm start",
+    "postinstall": "cd backend && npm install",
     "dev": "cd frontend && npm run dev",
     "backend:dev": "cd backend && npm run dev",
     "backend:start": "cd backend && npm start",
