--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
     "joi": "^17.11.0",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "ws": "^8.14.2"
   },
   "engines": {
     "node": ">=18.0.0",
