--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.4",
+    "@tabler/icons-react": "^3.20.0",
+    "lightweight-charts": "^5.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "next": "15.5.2",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "typescript": "^5",
